Fix button text overflow

--- a/src/components/Signin/signin.scss
+++ b/src/components/Signin/signin.scss
@@ -11,4 +11,10 @@
     display: flex;
     justify-content: space-between;
   }
+
+  .btn-nobreak {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
